--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>5867</title>
+  </head>
+  <body>
+
+<h2>Welcome to my game page.</h2>
+
+    <p>This is page does not even have content yet. And I have just begun doing stuff around this project. 
+    So there is not much to see, but as I am still earning how to do stuff, 
+    especially with html I'll be sure to keep adding content to this page.</p>
+  
+    <p>If you want to get an idea about the game, the README in my repository will likely be the most 
+    up to date piece of information you can get.</p>
+
+  </body>
+</html>
